simpleAmbimage is now modular and embeddable in other projects like whatv

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
 	<script src='ambimage.js'></script>
+	<img id='img' src="last.jpg" onload="simpleAmbimage.create(this)"/>
 </body>
 </html>
